src/objects/CST_App_Settings_CUST__c.object
<CustomObject>
    <description>Holds application-wide settings for the Customer Search Tool</description>
    <fields>
        <fullName>Access_Token_CUST__c</fullName>
        <description>Access token used to access the CST, acquired via Oauth</description>
        <inlineHelpText>Access token used to access the CST, acquired via Oauth</inlineHelpText>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bnft_Dsgn_Cd_CUST__c</fullName>
        <defaultValue>&quot;MD,PhD,PsyD&quot;</defaultValue>
        <description>Default values for Additional Details: Professional Designation (US Only) multi-select picklist</description>
        <inlineHelpText>Default values for Additional Details: Professional Designation (US Only) multi-select picklist</inlineHelpText>
        <label>Professional Designation (US Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Clsfctn_Cd_CUST__c</fullName>
        <defaultValue>&quot;Exceptional, Extraordinary, Phenomenal&quot;</defaultValue>
        <description>Default values for Classification search control</description>
        <inlineHelpText>Default values for Classification search control</inlineHelpText>
        <label>Account Classification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Status_Types_CUST__c</fullName>
        <description>Values for the Additional Details: Status multi-select picklist</description>
        <inlineHelpText>Values for the Additional Details: Status multi-select picklist</inlineHelpText>
        <label>Account Status Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliation_Countries_CUST__c</fullName>
        <description>Values for the Relationship Information (Affiliations): Relationship Country multi-select picklist</description>
        <inlineHelpText>Values for the Relationship Information (Affiliations): Relationship Country multi-select picklist</inlineHelpText>
        <label>Affiliation Countries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliation_Priority_Rank_Nbr_CUST__c</fullName>
        <defaultValue>&quot;1,2,3,4,5&quot;</defaultValue>
        <description>Values for the Relationship Information (Affiliations): Priority Rank multi-select picklist</description>
        <inlineHelpText>Values for the Relationship Information (Affiliations): Priority Rank multi-select picklist</inlineHelpText>
        <label>Affiliation Priority Rank</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Role_Types_CUST__c</fullName>
        <description>Values for the Relationship Information (Affiliations): Relationship Role multi-select picklist</description>
        <inlineHelpText>Values for the Relationship Information (Affiliations): Relationship Role multi-select picklist</inlineHelpText>
        <label>Affiliation Role Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Altid_Altrnt_Id_Typ_Cd_CUST__c</fullName>
        <description>Values for the Additional Details: Alternate Id Type picklist</description>
        <inlineHelpText>Values for the Additional Details: Alternate Id Type picklist</inlineHelpText>
        <label>Alternate Id Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Id_CUST__c</fullName>
        <description>Client Id provided by the CST endpoint for the Mercury application</description>
        <inlineHelpText>Client Id provided by the CST endpoint for the Mercury application</inlineHelpText>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret_CUST__c</fullName>
        <description>Client secret provided by the CST endpoint for access to the CST by Mercury</description>
        <inlineHelpText>Client secret provided by the CST endpoint for access to the CST by Mercury</inlineHelpText>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Record_Type_CUST__c</fullName>
        <description>A comma-delimited list of Account record types used for Employees.</description>
        <inlineHelpText>A comma-delimited list of Account record types used for Employees. Entries should match RecordType.DeveloperName when viewing the schema directly or the &quot;Record Type Name&quot; when viewing Record Type Detail UI.  E.g. Employee_GLBL</inlineHelpText>
        <label>Employee Record Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Record_Type_Id_CUST__c</fullName>
        <description>Do not edit. This field filled programmatically based on the record type names in Employee_Record_Type_CUST</description>
        <inlineHelpText>Do not edit. This field filled programmatically based on the record type names in Employee_Record_Type_CUST</inlineHelpText>
        <label>Employee Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCO_Record_Type_Ids_CUST__c</fullName>
        <description>Do not edit. This field filled programmatically based on the record type names in HCO_Record_Types_CUST</description>
        <inlineHelpText>Do not edit. This field filled programmatically based on the record type names in HCO_Record_Types_CUST</inlineHelpText>
        <label>HCO Record Type Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCO_Record_Types_CUST__c</fullName>
        <description>A comma-delimited list of Account record types used for Health Care Organizations.</description>
        <inlineHelpText>A comma-delimited list of Account record types used for HCOs. Entries should match RecordType.DeveloperName when viewing the schema directly or the &quot;Record Type Name&quot; when viewing Record Type Detail UI. E.g. HCO_GLBL</inlineHelpText>
        <label>HCO Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Message_CUST__c</fullName>
        <description>Tool should display a user message to user before allowing any access to data, the user must check a box to accept the terms before they are granted access to data</description>
        <inlineHelpText>Tool should display a user message to user before allowing any access to data, the user must check a box to accept the terms before they are granted access to data</inlineHelpText>
        <label>Login Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Type_Ids_CUST__c</fullName>
        <description>Do not edit. This field filled programmatically based on the record type names in Record_Types_CUST</description>
        <inlineHelpText>Do not edit. This field filled programmatically based on the record type names in Record_Types_CUST</inlineHelpText>
        <label>Record Type Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Types_CUST__c</fullName>
        <description>Comma-delmited list of record types to include in CST search results</description>
        <inlineHelpText>A comma-delimited list of Account record types to include for searching. Entries should match RecordType.DeveloperName when viewing the schema directly or the &quot;Record Type Name&quot; when viewing Record Type Detail UI.  E.g. HCP_GLBL,Non_HCP_GLBL,HCO_GLBL</inlineHelpText>
        <label>Record Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty_Spclty_Cd_CUST__c</fullName>
        <defaultValue>&quot;Cancer,Diabetes,Hypercholesterolemia&quot;</defaultValue>
        <description>Default values for Additional Details:Specialty multi-select picklist</description>
        <inlineHelpText>Default values for Additional Details:Specialty multi-select picklist</inlineHelpText>
        <label>Specialty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty_priority_rank_CUST__c</fullName>
        <defaultValue>&quot;1,2,3,4,5&quot;</defaultValue>
        <description>Default values for Additional Details:Only Specialty Ranks multi-select picklist</description>
        <inlineHelpText>Default values for Additional Details:Only Specialty Ranks multi-select picklist</inlineHelpText>
        <label>Specialty Priority Rank</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>CST App Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSTAPP-{0000}</displayFormat>
        <label>CST App Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CST App Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>